# AD.Mathematics

./: AD.Mathematics.sln  AD.Mathematics.sln.DotSettings  README.md
AD.Mathematics/: AD.Mathematics.csproj  ArrayConformabilityException_1.cs  IDistribution.cs  IDistribution_1.cs  ILinkFunction.cs  IRegressionModel.cs
AD.Mathematics.Console/: AD.Mathematics.Console.csproj  Program.cs
AD.Mathematics.Tests/: AD.Mathematics.Tests.csproj  ArrayEqualityComparer.cs  GeneralizedLinearModelTests.cs  GravityCourseObservation.cs  IndicatorTesting.cs  MatrixProductTesting.cs  Observation.cs  RegressionTesting.cs  StatisticalTesting.cs
AD.Mathematics.Tests/Observations/: WeightedRegressionObservation.cs
AD.Mathematics.Tests/Utilities/: ArrayEqualityComparer.cs
AD.Mathematics/Distributions/: GaussianDistribution.cs  IDistribution.cs  IDistribution_1.cs  PoissonDistribution.cs
AD.Mathematics/LinkFunctions/: ILinkFunction.cs  IdentityLinkFunction.cs  LogLinkFunction.cs  LogitLinkFunction.cs  PowerLinkFunction.cs
AD.Mathematics/Matrix/: Append_1.cs  CloneArrays_1.cs  ColumnMeans.cs  Covariances.cs  (+31 more)
Presentations/: README.md
cpp/: CMakeLists.txt  IDistribution.h  ILinkFunction.h  IRegressionModel.h  main.cpp
cpp/Distributions/: GaussianDistribution.cpp  GaussianDistribution.h  PoissonDistribution.cpp  PoissonDistribution.h
cpp/LinkFunctions/: IdentityLinkFunction.h  LogLinkFunction.h
cpp/Matrix/: Append.h  Prepend.h
cpp/RegressionModels/: GeneralizedLinearModel.cpp  GeneralizedLinearModel.h
cpp/SpecialFunctions/: Factorial.cpp  Factorial.h  FactorialTemplate.h
(+6 files in other folders)
